fix content list issue on mobile version

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*
+-- Content:
 * base styles overrides
+* globals variabls
 * reusables components
 * differenets page sections
 *
@@ -416,7 +418,7 @@ header .branding a {
 }
 @media only screen and (max-width: 577px) {
     .content-section .content__key-points-holder .key-points-list {
-        font-size: 1.125em;
+        font-size: 1em;
     }
 }
 /* ==========================================================================
